--- a/css/media-query.css
+++ b/css/media-query.css
@@ -1,6 +1,6 @@
 @media (max-width:950px){
    
-  .fa-solid{
+  .fa-bars{
     display: flex  !important; 
     font-size: 25px;
     cursor: pointer;
