--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,15 +10,17 @@ body{
 *{
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+}
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:41px 114.5px 0px;
+    padding:41px 90px 0px;
 }
 
 .nav-links a{
-   text-decoration: none;
    color: black;
    padding-right: 20px;
 }
@@ -27,3 +29,70 @@ header .fa-bars{
     
     display: none;
 }
+
+/* introsection  start*/
+.introsection{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 90px;
+}
+
+.introsection .life-side h1{
+    
+    font-style: normal;
+    font-weight: 700;
+    font-size: 72px;
+    
+    letter-spacing: 2px;
+    /* margin-bottom: 10px; */
+    
+ 
+}
+.introsection .life-side h1 span{
+     color: #FF8A56;
+
+}
+.introsection .life-side{
+    display: flex;
+    flex-direction: column;
+    padding-top: 133.7px;
+    min-width: 660px;
+}
+.introsection .right-side{
+    padding-top: 82px;
+    min-width: 450px;
+}
+.introsection .life-side small{
+    display: inline-block;
+    
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+   
+    color: #666666;
+    margin-top: 34px;
+    margin-bottom: 38px;
+}
+
+.introsection .life-side button{
+    width: 151px;
+    height: 58px;
+    background-color:#000;
+    color: #fff;
+    margin-right: 25px;
+}
+
+.introsection .life-side a{
+    margin: 0 15px;
+    color: #000;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+
+
+
+
+
+/* introsection  end*/
