trusted by companents section flex basis verdim

--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -1,3 +1,4 @@
+      /* header start */
 @media (max-width:1150px){
    
   header .fa-bars{
@@ -15,12 +16,12 @@
     header{
       padding-right: 15px !important;
       padding-left: 10px !important;
-      overflow: hidden;
+      /* overflow: hidden; */
     }
     
 }
 
-/* introsection start */
+      /* introsection start */
 @media (max-width:847px){
   .introsection{
    
@@ -95,29 +96,19 @@
 
 
 
-/* Trusted-by-companents-section start */
-@media (min-width:741px) and (max-width:982px){
+   /* Trusted-by-companents-section start */
+@media  (max-width:982px){
   .companents1, .companents2,.companents3, .companents4{
-    flex-wrap: nowrap !important;
-    padding: 5px 50px;
-    margin: 10px 50px !important;
-    
-    
-  }
+     flex-basis: 25% !important;
+    }
+    .Trusted-by-companents{
+  padding-left: 30px !important; 
+    }
 }
 
-@media (max-width:700px) {
-  .companents1, .companents2,.companents3, .companents4{
-    padding: 0 20px !important;
-    margin: 10px 30px !important;
+@media (max-width:519px) {
+    .Trusted-by-companents{
+      padding-left: 0 !important; 
+        }
   }
- 
-  
-}
-@media (max-width:502px) {
-  .companents1, .companents2,.companents3, .companents4{
-    padding: 0 20px  !important;
-    margin: 10px 0px !important;
-    
-  }
-}
+
