--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -112,4 +112,39 @@
         }
   }
 
+/* .services-section  start*/
+@media (max-width:961px)  {
+  .service-card{
+    flex-basis: 50% !important;
+    padding: 30px !important;
+  }
+  .services-carts{
+    padding-left: 120px !important;
+  }
+}
+@media (max-width:900px) {
+  .services-carts{
+    padding-left: 70px !important;
+  }
+  
+}
 
+@media (max-width:706px) {
+  .services-carts{
+    padding-left: 10px !important;
+  }
+}
+@media (max-width:596px) {
+  .services-carts{
+    padding-left: 0px !important;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    padding-left: 0;
+  }
+  
+  .service-card{
+    padding:5px 0px !important;
+  }
+  
+}
