--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ header .fa-bars{
 .Trusted-by-companents-section {
    
     margin-top: 10px;
+    margin-bottom: 10px;
 
 
 }
@@ -125,3 +126,71 @@ header .fa-bars{
     min-width: 141px;
 }
 
+/* services-section start */
+
+.services-section > h4{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 22px;
+line-height: 22px;
+text-align: center;
+letter-spacing: 4px;
+color: #FF5E69;
+padding-top: 70px;
+}
+
+.services-section > h1{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 54px;
+line-height: 59px;
+text-align: center;
+letter-spacing: 1px;
+padding-top: 20px;
+
+
+}
+.service-card img{
+    min-width: 70px;
+}
+.services-carts{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.service-card > h4{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 26px;
+}
+.service-card > p{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 28px;
+color: #666666;
+padding-top: 25px;
+}
+.service-card > ul{
+    padding-top: 21px;
+}
+ .service-card > ul > li{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 28px;
+list-style: square;
+list-style-position:inside ;
+padding-top: 10px;
+ }
+ .service-card{
+    min-width: 252px;
+    padding-top: 117px;
+ }
+ 
