--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -6,10 +6,10 @@
     font-size: 25px !important;
     width: 10px !important;
     cursor: pointer;
+    transition: all 1s ease;
   }
   header .fa-bars:hover{
-    transform:rotate(360deg);
-    transition: all 2s ease;
+    transform:scale(1.5);
   }
   .nav-links{
     display: none;
