--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,9 +193,74 @@ padding-top: 10px;
  .service-card{ 
     min-width: 252px;
     padding: 10px;
+    transition: all 1s ease;
  }
  .service-card:hover{
     box-shadow: 0 0 5px #000;
     border-radius: 10px;
+    transform:scale(1.1);
  }
  /* .services-cards end */
+
+ /* projects section */
+ .projects-section{
+    display: flex;
+    flex-direction: column;
+    padding-top: 167px;
+    
+
+ }
+ .projects-text > h4{
+
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 22px;
+line-height: 22px;
+
+
+letter-spacing: 4px;
+text-transform: uppercase;
+
+color: #B16CEA;
+
+ }
+ .projects-text{
+    display: flex;
+    flex-direction: column;
+ }
+ .projects-text-button {
+    display: flex;
+    justify-content:space-between;
+    padding-top: 20px;
+ }
+ .projects-text-button > p{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 54px;
+line-height: 59px;
+
+ }
+ .projects-text-button > button{
+ width: 201px;
+ height: 58px;
+ background-color: #000;
+ color: #fff;
+ 
+ }
+ .projects-cards{
+    display: flex;
+    padding-top: 70px;
+    gap: 24px;
+    
+ }
+ .projects-cards .card .card-top{
+    max-width: 486px;
+    max-height: 305px;
+ }
+ .projects-cards .card-top img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+ }
