--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,11 +202,12 @@ padding-top: 10px;
  }
  /* .services-cards end */
 
- /* projects section */
+ /* projects section start */
  .projects-section{
     display: flex;
     flex-direction: column;
     padding-top: 167px;
+    padding-left: 113px;
     
 
  }
@@ -233,6 +234,7 @@ color: #B16CEA;
     display: flex;
     justify-content:space-between;
     padding-top: 20px;
+    padding-right: 112px;
  }
  .projects-text-button > p{
     font-family: 'Roboto';
@@ -253,6 +255,7 @@ line-height: 59px;
     display: flex;
     padding-top: 70px;
     gap: 24px;
+    flex-wrap: nowrap;
     
  }
  .projects-cards .card .card-top{
@@ -263,4 +266,38 @@ line-height: 59px;
     object-fit: cover;
     width: 100%;
     height: 100%;
+    /* max-width: 486px;
+    max-height: 305px; */
+ }
+ .card-bottom{
+    display: flex;
+    flex-direction: column;
+    gap: 17px;
+    padding: 32px;
+/* background-color: aqua; */
+
+ }
+ .card-bottom  h5{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 14px;
+    /* identical to box height, or 100% */
+    color: #3C46FF;
+    letter-spacing: 4px;
+ }
+ .card-bottom h4{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 26px;
+ }
+ .card-bottom .view-project{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 18px;
  }
