--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -105,14 +105,14 @@
   .companents1, .companents2,.companents3, .companents4{
      flex-basis: 25% !important;
     }
-    .Trusted-by-companents{
+    .trusted-by-companents{
   padding-left: 30px !important; 
     }
 }
 
 
 @media (max-width:519px) {
-    .Trusted-by-companents{
+    .trusted-by-companents{
       padding-left: 0 !important; 
         }
   }
@@ -162,10 +162,11 @@
 }
 
  /* projects section  start*/
- @media (max-width:928px) {
+ @media (max-width:1193px) {
   .projects-section{
     padding-left: 0 !important;
     /* align-items: center; */
+    padding-top: 80px !important;
   }
   .projects-text{
     align-items: center;
@@ -196,4 +197,71 @@
     width: 350px !important;
     height: 250px;
   }
+}
+
+/* blog-section start */
+@media (max-width:1293px) {
+  .blog-section .main{
+    padding-left: 20px !important;
+    padding-right:20px !important;
+  }
+
+}
+@media (max-width:1038px){
+  .blog-section .main{
+   flex-direction: column;
+   align-items: baseline;
+ 
+   padding-left: 100px !important;
+    padding-right:0px !important;
+    padding-top: 40px !important;
+  }
+  .main .blog-left-side{
+    padding-bottom: 100px !important;
+ 
+  }
+  .blog-section .arrow .material-symbols-outlined{
+    width: 40px !important;
+    height: 40px !important;
+    padding: 8px !important;
+    margin:2px !important ;
+  
+   }
+   .blog-section .arrow{
+    padding-right: 10px !important;
+ }
+}
+@media(max-width:668px){
+  
+  .blog-section .main{
+    align-items: center;
+  }
+    
+  
+}
+@media(max-width:582px){
+  
+  .article-arrow{
+    width: 280px !important;
+  }
+  .blog-right-side .article h6{
+     font-size: 12px !important;
+ }
+   
+  .blog-right-side .article h4{
+     font-size: 17px !important;
+  }
+  .main .blog-left-side{
+    padding-right: 65px !important;
+  }
+  .blog-section .arrow .material-symbols-outlined{
+    width: 35px !important;
+    height: 35px !important;
+    padding: 5px !important;
+    margin:2px !important ;
+  
+   }
+   .blog-section .arrow{
+    padding-right: 10px !important;
+ }
 }
