--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -1,3 +1,5 @@
+
+/* header start */
 @media (max-width:1150px){
    
   header .fa-bars{
@@ -31,8 +33,8 @@
     padding: 0 !important;
   }
   .introsection .left-side{
-    
     min-width: 500px !important;
+    padding-top: 80px !important;
     
   }
   .introsection .left-side h1{
@@ -98,15 +100,7 @@
     font-size: 45px !important;
   }
 }
-/* @media(max-width:517px){
-  .introsection .left-side{
-    width: 450px !important;
 
-  }
-  .introsection .right-side{
-  width: 450px !important;
-  }
-} */
 
 
 /* Trusted-by-companents-section start */
@@ -143,30 +137,36 @@
     
   }
 }
-@media  (max-width:962px){
+@media  (max-width:962px) {
   .service-card{
-    flex-basis: 20% !important;
+    /* background-color: aqua; */
+    width: 329px !important;
   } 
 }
   
 @media (max-width:830px) {
-  .service-card{
-    flex-basis: 33% !important;
-  }
   .services-section > h1{
     padding-bottom: 50px !important;
   }
+  .services-section > h1{
+    font-weight: 700;
+  font-size: 49px !important;
+  }
 }
-  
-@media (max-width:577px) {
+
+@media (max-width:735px) {
   .services-cards{
-    
     flex-direction: column;
     align-items: center;
   
 }
+
+.services-section > h1{
+ 
+font-size: 40px !important;
+}
 .service-card{
-  width: 255px !important;
+  width: 300px !important;
   
 }
 }
@@ -175,7 +175,6 @@
  @media (max-width:1193px) {
   .projects-section{
     padding-left: 0 !important;
-    /* align-items: center; */
     padding-top: 80px !important;
   }
   .projects-text{
@@ -201,6 +200,18 @@
     width: 486px;
     height: 305px;
  }
+}
+@media (max-width:830px){
+  .projects-text-button > p{
+ 
+    font-size: 49px !important;
+    }
+}
+@media (max-width:543px){
+.projects-text-button > p{
+ 
+font-size: 40px !important;
+}
 }
 @media (max-width:506px) {
   .card-top{
